test/testdata/gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: GatewayClass
# metadata:
#   name: acme-lb
# spec:
#   controllerName: acme.io/gateway-controller
#   parametersRef:
#     name: acme-lb
#     group: acme.io
#     kind: Parameters
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: linkerd
  rules:
  - backendRefs:
    - name: podinfo
      port: 8080
      weight: 50
    - name: podinfo-canary
      port: 8080
      weight: 50
